--- a/twopointfour/src/Components/UI/ModalBackdrop.module.css
+++ b/twopointfour/src/Components/UI/ModalBackdrop.module.css
@@ -1,4 +1,4 @@
-.modal {
+.backdrop {
   height: 100vh;
   width: 100vw;
   position: fixed;
@@ -8,5 +8,6 @@
   flex-flow: row;
   justify-content: center;
   align-items: center;
-  z-index: 3;
+  z-index: 2;
+  background-color: rgba(0, 0, 0, 0.6);
 }
