--- a/twopointfour/src/Components/UI/Chip.module.css
+++ b/twopointfour/src/Components/UI/Chip.module.css
@@ -2,10 +2,32 @@
   border-radius: 2rem;
   font-size: 1.2rem;
   padding: 0.2rem 1rem;
+  display: flex;
+  flex-flow: row;
+  justify-content: center;
+  align-items: center;
+  white-space: nowrap;
+}
+
+.small {
+  border-radius: 2rem;
+  font-size: 0.8rem;
+  padding: 0.2rem 0.8rem;
 }
 
 .yellow {
-  border: 1px solid var(--yellow-500);
-  background-color: var(--gray-50);
+  border: 1px solid var(--yellow-400);
+  background-color: var(--yellow-50);
   color: var(--yellow-500);
+}
+
+.gray {
+  border: 1px solid var(--gray-400);
+  background-color: var(--gray-50);
+  color: var(--gray-500);
+}
+.green {
+  border: 1px solid var(--green-400);
+  background-color: var(--green-50);
+  color: var(--green-500);
 }
