--- a/twopointfour/src/Components/Comments/CommentItem.module.css
+++ b/twopointfour/src/Components/Comments/CommentItem.module.css
@@ -5,6 +5,15 @@
   gap: 1rem;
 }
 
+.comment__delete {
+  align-self: center;
+}
+.delete-icon {
+  width: 1.5rem;
+  height: 1.5rem;
+  fill: var(--gray-300);
+}
+
 .comment__text p {
   font-size: 1.2rem;
 }
@@ -16,7 +25,7 @@
   border-radius: 1rem;
   background-color: var(--yellow-50);
   box-shadow: 0 1px 5px 0 rgba(120, 53, 15, 0.25);
-  padding: 1rem;
+  padding: 0.5rem;
 
   /* OPTION A */
   /* grid-template-columns: minmax(10rem, 1fr); */
@@ -51,4 +60,8 @@
   white-space: nowrap;
   gap: 0.5rem;
   flex-shrink: 1;
+}
+
+.p {
+  overflow-wrap: break-word;
 }
