before i change it up

--- a/twopointfour/src/Components/Nav/NavItem.module.css
+++ b/twopointfour/src/Components/Nav/NavItem.module.css
@@ -14,7 +14,7 @@
 
 .pop {
   border-radius: 50%;
-  background-color: rgb(255, 196, 0);
+  background-color: var(--yellow-300);
   fill: white !important;
   height: 5rem;
   width: 5rem;
