--- a/twopointfour/src/Components/UI/Metrics/MetricsCard.module.css
+++ b/twopointfour/src/Components/UI/Metrics/MetricsCard.module.css
@@ -1,12 +1,12 @@
 .metrics {
   border-radius: 1rem;
   padding: 0.5rem 1rem 1rem 1rem;
-  box-shadow: 0 1px 10px 0 rgba(0, 0, 0, 0.15);
+  box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.35);
   display: flex;
   flex-flow: row;
   justify-content: flex-start;
   gap: 1rem;
-  background-color: var(--yellow-100);
+  background-color: white;
 }
 
 .metrics__icon {
