--- a/twopointfour/src/App.css
+++ b/twopointfour/src/App.css
@@ -53,6 +53,17 @@ html {
   --green-700: #047857;
   --green-800: #065f46;
   --green-900: #064e3b;
+
+  --blue-50: #eff6ff;
+  --blue-100: #dbeafe;
+  --blue-200: #bfdbfe;
+  --blue-300: #93c5fd;
+  --blue-400: #60a5fa;
+  --blue-500: #3b82f6;
+  --blue-600: #2563eb;
+  --blue-700: #1d4ed8;
+  --blue-800: #1e40af;
+  --blue-900: #1e3a8a;
 }
 
 body {
