--- a/twopointfour/src/Components/Timer/Info.module.css
+++ b/twopointfour/src/Components/Timer/Info.module.css
@@ -1,7 +1,20 @@
 .info {
-  display: flex;
-  flex-flow: row;
-  justify-content: space-around;
-  width: 100%;
-  margin-top: 1rem;
+  display: grid;
+  grid-template-areas: " previous previous set distance";
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr;
+  gap: 1rem;
+  margin: 1rem 1rem 1rem 1rem;
+}
+
+.previous {
+  grid-area: previous;
+}
+
+.set {
+  grid-area: set;
+}
+
+.distance {
+  grid-area: distance;
 }
