--- a/twopointfour/src/Components/Timer/LargeClock.module.css
+++ b/twopointfour/src/Components/Timer/LargeClock.module.css
@@ -8,4 +8,17 @@
   padding: 0 1rem;
   margin: 2rem;
   box-shadow: 0 1px 10px 0 rgba(0, 0, 0, 0.15);
+  position: relative;
+}
+
+.icon {
+  position: absolute;
+  height: 3rem;
+  width: 3rem;
+  fill: var(--gray-400);
+  right: -1rem;
+  bottom: -1rem;
+  border-radius: 50%;
+  background-color: white;
+  cursor: pointer;
 }
