--- a/twopointfour/src/Components/UI/Table.module.css
+++ b/twopointfour/src/Components/UI/Table.module.css
@@ -13,3 +13,16 @@
   box-shadow: 0 1px 10px 0 rgba(0, 0, 0, 0.15);
   border-radius: 1rem;
 }
+
+.large {
+  width: 80vw;
+}
+
+.large th {
+  font-size: 1.5rem;
+  font-weight: 500;
+}
+
+.large td {
+  font-size: 1.4rem;
+}
