--- a/twopointfour/src/Components/Header/Header.module.css
+++ b/twopointfour/src/Components/Header/Header.module.css
@@ -9,14 +9,27 @@
 }
 
 .header h2 {
-  color: #fffbeb;
+  color: var(--yellow-50);
+  font-weight: 500;
+  font-size: 1.8rem;
 }
 
 .header__list {
-  display: flex;
-  flex-flow: row;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: repeat(3, minmax(0, 1fr));
   align-items: center;
+}
+
+.header__list li:first-child {
+  justify-self: flex-start;
+}
+
+.header__list li:last-child {
+  justify-self: flex-end;
+}
+
+.header__list li:not(:first-child):not(:last-child) {
+  justify-self: center;
 }
 
 .header ul {
@@ -29,10 +42,56 @@
   background-color: white;
   border-radius: 50%;
 }
+
 .profile {
-  height: 4rem;
-  width: 4rem;
+  height: 2.5rem;
+  width: 2.5rem;
   fill: white;
   background-color: var(--yellow-300);
   border-radius: 50%;
+}
+
+.profile__li {
+  height: 2.5rem;
+}
+
+.shop__icon {
+  height: 2.5rem;
+  width: 2.5rem;
+  fill: white;
+}
+
+.shop__group {
+  display: flex;
+  flex-flow: row;
+  justify-self: flex-end;
+  align-items: center;
+}
+
+.coins {
+  background-color: white;
+  border-radius: 2rem;
+  height: 2.5rem;
+  margin-right: 1rem;
+  display: flex;
+  flex-flow: row;
+  align-items: center;
+  padding: 0.4rem;
+  gap: 0.5rem;
+}
+
+.coins__icon {
+  height: 1.5rem;
+  width: 1.5rem;
+}
+.coins__plus {
+  height: 1.5rem;
+  width: 1.5rem;
+  fill: var(--green-400);
+  margin-right: 0.5rem;
+}
+.coins__number {
+  max-width: 4rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
