--- a/twopointfour/src/Components/Profile/Profile.module.css
+++ b/twopointfour/src/Components/Profile/Profile.module.css
@@ -83,3 +83,10 @@
   background-color: white;
   border-radius: 50%;
 }
+
+.dp_change {
+  display: flex;
+  flex-flow: column;
+  gap: 1rem;
+  align-items: center;
+}
